시간주파수 드리프트 개선 및 캡션을 박스 밖으로 이동
- temporal_frequency.gif: 프레임 증가에 따라 좌→우 드리프트가 명확하도록 x_shift 기반으로 변경
- 두 GIF에서 내부 캡션 제거(순수 200x200 패치)
- ko/en 도전과제 페이지: 회색 박스(이미지) + 박스 밖 캡션(0.9rem, #94a3b8) 구조로 변경

--- a/research/overview.html
+++ b/research/overview.html
@@ -94,16 +94,26 @@
                             <!-- Spatial/Temporal frequency GIFs (same-size left/right boxes) -->
                             <div style="margin-bottom: 2rem; display: flex; gap: 1.25rem; justify-content: center; flex-wrap: wrap;">
                                 <div style="flex: 0 1 260px; text-align: center;">
-                                    <img src="../assets/images/gabor_spatial_frequency.gif"
-                                         alt="Gabor Patch Spatial Frequency Variation (1-30 cpd)"
-                                         style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
-                                         loading="lazy">
+                                    <div style="background: #f1f5f9; border: 1px solid #e2e8f0; border-radius: 12px; padding: 16px;">
+                                        <img src="../assets/images/gabor_spatial_frequency.gif"
+                                             alt="Gabor Patch Spatial Frequency Variation (1-30 cpd)"
+                                             style="width: 100%; height: auto; display: block; border-radius: 8px;"
+                                             loading="lazy">
+                                    </div>
+                                    <div style="margin-top: 0.75rem; font-size: 0.9rem; color: #94a3b8; text-align: center;">
+                                        (1–30) spatial frequency (cpd)
+                                    </div>
                                 </div>
                                 <div style="flex: 0 1 260px; text-align: center;">
-                                    <img src="../assets/images/temporal_frequency.gif"
-                                         alt="Gabor Patch Temporal Frequency Variation (1-30 Hz)"
-                                         style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
-                                         loading="lazy">
+                                    <div style="background: #f1f5f9; border: 1px solid #e2e8f0; border-radius: 12px; padding: 16px;">
+                                        <img src="../assets/images/temporal_frequency.gif"
+                                             alt="Gabor Patch Temporal Frequency Variation (1-30 Hz)"
+                                             style="width: 100%; height: auto; display: block; border-radius: 8px;"
+                                             loading="lazy">
+                                    </div>
+                                    <div style="margin-top: 0.75rem; font-size: 0.9rem; color: #94a3b8; text-align: center;">
+                                        (1–30) temporal frequency (Hz)
+                                    </div>
                                 </div>
                             </div>
 
