시간주파수 GIF를 플리커 램프로 개선 및 박스/캡션 레이아웃 정리
- temporal_frequency.gif: 드리프트 제거, 1→30Hz로 빨라지는 플리커(ON/OFF) 램프 애니메이션 적용
- ko/en 도전과제 페이지: 사각 이미지(패딩/라운드 제거) + 박스 밖 캡션, 박스 간격 2배(gap 2.5rem)

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -88,29 +88,25 @@
                             </p>
 
                             <!-- 공간/시간 주파수 GIF (좌/우 동일 크기 박스) -->
-                            <div style="margin-bottom: 2rem; display: flex; gap: 1.25rem; justify-content: center; flex-wrap: wrap;">
-                                <div style="flex: 0 1 260px; text-align: center;">
-                                    <div style="background: #f1f5f9; border: 1px solid #e2e8f0; border-radius: 12px; padding: 16px;">
-                                        <img src="../../assets/images/gabor_spatial_frequency.gif"
-                                             alt="가보 패치 공간주파수 변화 (1-30 cpd)"
-                                             style="width: 100%; height: auto; display: block; border-radius: 8px;"
-                                             loading="lazy">
-                                    </div>
-                                    <div style="margin-top: 0.75rem; font-size: 0.9rem; color: #94a3b8; text-align: center;">
+                            <div style="margin-bottom: 2rem; display: flex; gap: 2.5rem; justify-content: center; flex-wrap: wrap;">
+                                <figure style="flex: 0 1 260px; margin: 0; text-align: center;">
+                                    <img src="../../assets/images/gabor_spatial_frequency.gif"
+                                         alt="가보 패치 공간주파수 변화 (1-30 cpd)"
+                                         style="width: 100%; height: auto; display: block; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9;"
+                                         loading="lazy">
+                                    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center;">
                                         (1–30) spatial frequency (cpd)
-                                    </div>
-                                </div>
-                                <div style="flex: 0 1 260px; text-align: center;">
-                                    <div style="background: #f1f5f9; border: 1px solid #e2e8f0; border-radius: 12px; padding: 16px;">
-                                        <img src="../../assets/images/temporal_frequency.gif"
-                                             alt="가보 패치 시간주파수 변화 (1-30 Hz)"
-                                             style="width: 100%; height: auto; display: block; border-radius: 8px;"
-                                             loading="lazy">
-                                    </div>
-                                    <div style="margin-top: 0.75rem; font-size: 0.9rem; color: #94a3b8; text-align: center;">
+                                    </figcaption>
+                                </figure>
+                                <figure style="flex: 0 1 260px; margin: 0; text-align: center;">
+                                    <img src="../../assets/images/temporal_frequency.gif"
+                                         alt="가보 패치 시간주파수 변화 (1-30 Hz)"
+                                         style="width: 100%; height: auto; display: block; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9;"
+                                         loading="lazy">
+                                    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center;">
                                         (1–30) temporal frequency (Hz)
-                                    </div>
-                                </div>
+                                    </figcaption>
+                                </figure>
                             </div>
 
                             <div class="challenge-visual-grid">
