--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -94,8 +94,13 @@
                                          alt="가보 패치 공간주파수 변화 (1-30 cpd)"
                                          style="width: 100%; height: auto; display: block; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9;"
                                          loading="lazy">
-                                    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center;">
-                                        (1–30) spatial frequency (cpd)
+                                    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center;"
+                                        data-gabor-caption="true"
+                                        data-caption-start="1"
+                                        data-caption-end="30"
+                                        data-caption-frames="30"
+                                        data-caption-duration="4500">
+                                        (<span class="gabor-caption-value">1</span>) <span class="gabor-caption-label">spatial frequency (cpd)</span>
                                     </figcaption>
                                 </figure>
                                 <figure style="flex: 0 1 260px; margin: 0; text-align: center;">
@@ -103,8 +108,13 @@
                                          alt="가보 패치 시간주파수 변화 (1-30 Hz)"
                                          style="width: 100%; height: auto; display: block; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9;"
                                          loading="lazy">
-                                    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center;">
-                                        (1–30) temporal frequency (Hz)
+                                    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center;"
+                                        data-gabor-caption="true"
+                                        data-caption-start="1"
+                                        data-caption-end="30"
+                                        data-caption-frames="120"
+                                        data-caption-duration="5400">
+                                        (<span class="gabor-caption-value">1</span>) <span class="gabor-caption-label">temporal frequency (Hz)</span>
                                     </figcaption>
                                 </figure>
                             </div>
