--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -89,7 +89,7 @@
 
                             <!-- 공간/시간 주파수 GIF (좌/우 동일 크기 박스) -->
                             <div style="margin-bottom: 2rem; display: flex; gap: 2.5rem; justify-content: center; flex-wrap: wrap;">
-                                <figure style="flex: 0 1 260px; margin: 0; text-align: center;">
+                                <figure style="flex: 0 1 182px; margin: 0; text-align: center;">
                                     <img src="../../assets/images/gabor_spatial_frequency.gif"
                                          alt="가보 패치 공간주파수 변화 (1-30 cpd)"
                                          style="width: 100%; height: auto; display: block; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9;"
@@ -100,10 +100,12 @@
                                         data-caption-end="30"
                                         data-caption-frames="30"
                                         data-caption-duration="4500">
-                                        (<span class="gabor-caption-value">1</span>) <span class="gabor-caption-label">spatial frequency (cpd)</span>
+                                        <span class="gabor-caption-label">spatial frequency:</span>
+                                        <span class="gabor-caption-value">1</span>
+                                        <span class="gabor-caption-unit">cpd</span>
                                     </figcaption>
                                 </figure>
-                                <figure style="flex: 0 1 260px; margin: 0; text-align: center;">
+                                <figure style="flex: 0 1 182px; margin: 0; text-align: center;">
                                     <img src="../../assets/images/temporal_frequency.gif"
                                          alt="가보 패치 시간주파수 변화 (1-30 Hz)"
                                          style="width: 100%; height: auto; display: block; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9;"
@@ -112,9 +114,11 @@
                                         data-gabor-caption="true"
                                         data-caption-start="1"
                                         data-caption-end="30"
-                                        data-caption-frames="120"
+                                        data-caption-frames="30"
                                         data-caption-duration="5400">
-                                        (<span class="gabor-caption-value">1</span>) <span class="gabor-caption-label">temporal frequency (Hz)</span>
+                                        <span class="gabor-caption-label">temporal frequency:</span>
+                                        <span class="gabor-caption-value">1</span>
+                                        <span class="gabor-caption-unit">Hz</span>
                                     </figcaption>
                                 </figure>
                             </div>
