주파수 라벨 추가 및 시간주파수 캡션 동기화

--- a/research/overview.html
+++ b/research/overview.html
@@ -94,6 +94,9 @@
                             <!-- Spatial/Temporal frequency GIFs (same-size left/right boxes) -->
                             <div style="margin-bottom: 2rem; display: flex; gap: 2.5rem; justify-content: center; flex-wrap: wrap;">
                                 <figure style="flex: 0 1 182px; margin: 0; text-align: center;">
+                                    <div style="margin-bottom: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center;">
+                                        Spatial Frequency
+                                    </div>
                                     <img src="../assets/images/gabor_spatial_frequency.gif"
                                          alt="Gabor Patch Spatial Frequency Variation (1-30 cpd)"
                                          style="width: 100%; height: auto; display: block; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9;"
@@ -110,6 +113,9 @@
                                     </figcaption>
                                 </figure>
                                 <figure style="flex: 0 1 182px; margin: 0; text-align: center;">
+                                    <div style="margin-bottom: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center;">
+                                        Temporal Frequency
+                                    </div>
                                     <img src="../assets/images/temporal_frequency.gif"
                                          alt="Gabor Patch Temporal Frequency Variation (1-30 Hz)"
                                          style="width: 100%; height: auto; display: block; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9;"
@@ -118,8 +124,8 @@
                                         data-gabor-caption="true"
                                         data-caption-start="1"
                                         data-caption-end="30"
-                                        data-caption-frames="30"
-                                        data-caption-duration="4500">
+                                        data-caption-frames="120"
+                                        data-caption-duration="5400">
                                         <span class="gabor-caption-label">temporal frequency:</span>
                                         <span class="gabor-caption-value">1</span>
                                         <span class="gabor-caption-unit">Hz</span>
