--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -115,7 +115,8 @@
                                     <div data-temporal-flicker="canvas"
                                         data-freq-start="1"
                                         data-freq-end="30"
-                                        data-ramp-duration="10800"
+                                        data-ramp-duration="30000"
+                                        data-step-duration="1000"
                                         data-on-src="../../assets/images/temporal_frequency_on.png"
                                         data-off-src="../../assets/images/temporal_frequency_off.png"
                                         style="position: relative; width: 100%; aspect-ratio: 1 / 1; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9; overflow: hidden;">
@@ -213,7 +214,7 @@
         </section>
     </main>
 
-    <script src="../../assets/js/main.js?v=1.8"></script>
+    <script src="../../assets/js/main.js?v=1.9"></script>
 </body>
 
 </html>
