시간주파수 속도 배율 적용

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -117,6 +117,7 @@
                                         data-freq-end="30"
                                         data-ramp-duration="12000"
                                         data-step-duration="400"
+                                        data-speed-multiplier="2.5"
                                         data-on-src="../../assets/images/temporal_frequency_on.png"
                                         data-off-src="../../assets/images/temporal_frequency_off.png"
                                         style="position: relative; width: 100%; aspect-ratio: 1 / 1; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9; overflow: hidden;">
@@ -214,7 +215,7 @@
         </section>
     </main>
 
-    <script src="../../assets/js/main.js?v=2.0"></script>
+    <script src="../../assets/js/main.js?v=2.1"></script>
 </body>
 
 </html>
