--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -97,7 +97,7 @@
                                          alt="가보 패치 공간주파수 변화 (1-30 cpd)"
                                          style="width: 100%; height: auto; display: block; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9;"
                                          loading="lazy">
-                                    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center;"
+                                    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center; white-space: nowrap; min-height: 1.2em;"
                                         data-gabor-caption="true"
                                         data-caption-start="1"
                                         data-caption-end="30"
@@ -123,7 +123,7 @@
                                         style="position: relative; width: 100%; aspect-ratio: 1 / 1; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9; overflow: hidden;">
                                         <canvas class="temporal-flicker-canvas" style="width: 100%; height: 100%; display: block;"></canvas>
                                     </div>
-                                    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center;"
+                                    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center; white-space: nowrap; min-height: 1.2em;"
                                         data-temporal-caption="true">
                                         <span class="gabor-caption-label">temporal frequency:</span>
                                         <span class="temporal-caption-value">1</span>
