--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -93,10 +93,12 @@
                                     <div style="margin-bottom: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center;">
                                         공간주파수
                                     </div>
-                                    <img src="../../assets/images/gabor_spatial_frequency.gif"
-                                         alt="가보 패치 공간주파수 변화 (1-30 cpd)"
-                                         style="width: 100%; height: auto; display: block; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9;"
-                                         loading="lazy">
+                                    <div style="position: relative; width: 100%; aspect-ratio: 1 / 1; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9; overflow: hidden;">
+                                        <img src="../../assets/images/gabor_spatial_frequency.gif"
+                                             alt="가보 패치 공간주파수 변화 (1-30 cpd)"
+                                             style="position: absolute; inset: 0; width: 100%; height: 100%; object-fit: contain; display: block;"
+                                             loading="lazy">
+                                    </div>
                                     <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center; white-space: nowrap; min-height: 1.2em;"
                                         data-gabor-caption="true"
                                         data-caption-start="1"
