Update Research Overview Phase 1 & 2: Titles, Content, and Images

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -66,8 +66,8 @@
 
                     <!-- PHASE 1: Visual Neuroscience -->
                     <div class="challenge-section">
-                        <span class="challenge-phase-label">Phase 1: 시각 신경과학</span>
-                        <h2 class="challenge-title">신경 코드의 <strong>해독</strong></h2>
+                        <span class="challenge-phase-label">Phase 1: 신경시과학</span>
+                        <h2 class="challenge-title">신경 코드의 <strong>디코딩</strong></h2>
 
                         <p class="challenge-desc" style="word-break: keep-all;">
                             시각을 교정하기 전에, 뇌가 이를 어떻게 처리하는지 먼저 이해해야 합니다. 우리의 연구는 시각 경로가 움직임과 대비를 어떻게 해석하는지 분석하여
@@ -88,47 +88,49 @@
                             </p>
 
                             <!-- 공간/시간 주파수 GIF (좌/우 동일 크기 박스) -->
-                            <div style="margin-bottom: 2rem; display: flex; gap: 2rem; justify-content: center; flex-wrap: nowrap; align-items: flex-start;">
+                            <div
+                                style="margin-bottom: 2rem; display: flex; gap: 2rem; justify-content: center; flex-wrap: nowrap; align-items: flex-start;">
                                 <figure style="flex: 0 1 127px; margin: 0; text-align: center;">
-                                    <div style="margin-bottom: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center;">
+                                    <div
+                                        style="margin-bottom: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center;">
                                         공간주파수
                                     </div>
-                                    <div style="position: relative; width: 127px; height: 127px; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9; overflow: hidden; transform: translateX(6mm);">
+                                    <div
+                                        style="position: relative; width: 127px; height: 127px; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9; overflow: hidden; transform: translateX(6mm);">
                                         <img src="../../assets/images/gabor_spatial_frequency.gif"
-                                             alt="가보 패치 공간주파수 변화 (1-30 cpd)"
-                                             style="position: absolute; inset: 0; width: 100%; height: 100%; object-fit: contain; display: block;"
-                                             loading="lazy">
+                                            alt="가보 패치 공간주파수 변화 (1-30 cpd)"
+                                            style="position: absolute; inset: 0; width: 100%; height: 100%; object-fit: contain; display: block;"
+                                            loading="lazy">
                                     </div>
-                                    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center; white-space: nowrap; height: 1.4em; line-height: 1.4em; overflow: hidden; transform: translateX(3mm);"
-                                        data-gabor-caption="true"
-                                        data-caption-start="1"
-                                        data-caption-end="30"
-                                        data-caption-frames="30"
-                                        data-caption-duration="4500">
+                                    <figcaption
+                                        style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center; white-space: nowrap; height: 1.4em; line-height: 1.4em; overflow: hidden; transform: translateX(3mm);"
+                                        data-gabor-caption="true" data-caption-start="1" data-caption-end="30"
+                                        data-caption-frames="30" data-caption-duration="4500">
                                         <span class="gabor-caption-label">spatial frequency:</span>
-                                        <span class="gabor-caption-value" style="display: inline-block; min-width: 2ch; text-align: right;">1</span>
+                                        <span class="gabor-caption-value"
+                                            style="display: inline-block; min-width: 2ch; text-align: right;">1</span>
                                         <span class="gabor-caption-unit">cpd</span>
                                     </figcaption>
                                 </figure>
                                 <figure style="flex: 0 1 127px; margin: 0; text-align: center;">
-                                    <div style="margin-bottom: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center; transform: translateX(-1.5mm);">
+                                    <div
+                                        style="margin-bottom: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center; transform: translateX(-1.5mm);">
                                         시간주파수
                                     </div>
-                                    <div data-temporal-flicker="canvas"
-                                        data-freq-start="1"
-                                        data-freq-end="30"
-                                        data-ramp-duration="12000"
-                                        data-step-duration="400"
-                                        data-speed-multiplier="2.5"
+                                    <div data-temporal-flicker="canvas" data-freq-start="1" data-freq-end="30"
+                                        data-ramp-duration="12000" data-step-duration="400" data-speed-multiplier="2.5"
                                         data-on-src="../../assets/images/temporal_frequency_on.png"
                                         data-off-src="../../assets/images/temporal_frequency_off.png"
                                         style="position: relative; width: 127px; height: 127px; border: 1px solid #e2e8f0; border-radius: 0; background: #f1f5f9; overflow: hidden; transform: translateX(6mm);">
-                                        <canvas class="temporal-flicker-canvas" style="width: 100%; height: 100%; display: block;"></canvas>
+                                        <canvas class="temporal-flicker-canvas"
+                                            style="width: 100%; height: 100%; display: block;"></canvas>
                                     </div>
-                                    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center; white-space: nowrap; height: 1.4em; line-height: 1.4em; overflow: hidden; transform: translateX(-3.5mm);"
+                                    <figcaption
+                                        style="margin-top: 0.5rem; font-size: 0.9rem; color: #94a3b8; text-align: center; white-space: nowrap; height: 1.4em; line-height: 1.4em; overflow: hidden; transform: translateX(-3.5mm);"
                                         data-temporal-caption="true">
                                         <span class="gabor-caption-label">temporal frequency:</span>
-                                        <span class="temporal-caption-value" style="display: inline-block; min-width: 2ch; text-align: right;">1</span>
+                                        <span class="temporal-caption-value"
+                                            style="display: inline-block; min-width: 2ch; text-align: right;">1</span>
                                         <span class="gabor-caption-unit">Hz</span>
                                     </figcaption>
                                 </figure>
@@ -164,27 +166,65 @@
 
                     <!-- PHASE 2: Optical Engineering -->
                     <div class="challenge-section">
-                        <span class="challenge-phase-label">Phase 2: 광학 공학</span>
-                        <h2 class="challenge-title">빛을 통한 안구의 <strong>제어</strong></h2>
+                        <span class="challenge-phase-label">Phase 2: 시광학 계측</span>
+                        <h2 class="challenge-title">눈의 6개 경계면에서의 신비: <strong>굴절</strong></h2>
 
                         <p class="challenge-desc" style="word-break: keep-all;">
-                            우리는 단순히 시력을 교정하는 것에 그치지 않고, 안구의 성장을 능동적으로 관리합니다. 주변부 망막의 초점면을 분석하여
-                            근시 진행을 멈추는 광학적 개입("완전 교정") 기술을 개발합니다.
+                            근시 진행은 단순히 안축장의 증가만이 아닌, 주변부 망막의 형태적 변화와 밀접한 관련이 있습니다. 우리는 등가구면굴절력에 따른 주변부 망막 곡률반경의 변화를 경선별로
+                            정밀하게 분석하여, 근시도가 망막의 기하학적 구조에 미치는 영향을 정량적으로 규명합니다.
                         </p>
 
-                        <div class="mechanism-grid">
-                            <div class="mechanism-item" style="border-top: 3px solid #003366;">
-                                <h4>문제점 (Problem)</h4>
-                                <p style="word-break: keep-all;">FS'(시상 초점선)이 망막 뒤에 맺히면 안구 성장을 촉진하는 신호가 발생합니다.</p>
+                        <div class="challenge-visual-container">
+                            <h3 style="font-size: 1.2rem; margin-bottom: 1rem; color: #0f172a; word-break: keep-all;">정밀
+                                기하광학 모델링 및 시뮬레이션</h3>
+
+                            <p
+                                style="font-size: 0.95rem; color: #475569; margin-bottom: 2rem; line-height: 1.6; word-break: keep-all;">
+                                2014년부터 지속적으로 고도화해 온 독자적인 계산 알고리즘을 통해, <strong>각막 전면과 후면, 수정체 피질의 전면과 후면, 그리고 수정체 핵의 전면과
+                                    후면 등 총 6개의 굴절면</strong>에서
+                                발생하는 모든 입사각과 굴절각을 기하광학적 관점에서 계산합니다. 이러한 정밀한 <strong>Ray-tracing(광선 추적)</strong> 시뮬레이션은
+                                망막 상의 최종 수렴 지점을
+                                정확히 예측하며, DRI OCT Triton으로 실측된 0~315도 경선의 망막 데이터와 결합되어 굴절이상도와 망막 형상 간의 상관관계를 완벽하게 검증합니다.
+                            </p>
+
+                            <!-- Images resized to be compact (similar to Phase 1) and arranged in a row -->
+                            <div class="challenge-visual-grid"
+                                style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+                                <figure
+                                    style="flex: 0 1 220px; background: #f8fafc; padding: 0.5rem; border-radius: 8px; border: 1px solid #e2e8f0;">
+                                    <img src="../../assets/images/research/phase2/oct_analysis.png" alt="망막 OCT 측정"
+                                        style="width: 100%; height: auto; border-radius: 4px;">
+                                    <figcaption
+                                        style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                                        OCT 망막 곡률 실측</figcaption>
+                                </figure>
+
+                                <figure
+                                    style="flex: 0 1 220px; background: #f8fafc; padding: 0.5rem; border-radius: 8px; border: 1px solid #e2e8f0;">
+                                    <img src="../../assets/images/research/phase2/optical_simulation.png"
+                                        alt="Ray-tracing 시뮬레이션" style="width: 100%; height: auto; border-radius: 4px;">
+                                    <figcaption
+                                        style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                                        6개 굴절면 Ray-tracing</figcaption>
+                                </figure>
+
+                                <figure
+                                    style="flex: 0 1 220px; background: #f8fafc; padding: 0.5rem; border-radius: 8px; border: 1px solid #e2e8f0;">
+                                    <img src="../../assets/images/research/phase2/curvature_graph.png" alt="곡률 변화 그래프"
+                                        style="width: 100%; height: auto; border-radius: 4px;">
+                                    <figcaption
+                                        style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                                        굴절이상도별 망막 형상</figcaption>
+                                </figure>
                             </div>
-                            <div class="mechanism-item" style="border-top: 3px solid #3b82f6;">
-                                <h4>관찰 (Observation)</h4>
-                                <p style="word-break: keep-all;">근시가 진행될수록 코쪽 망막이 가파라지며, 초점선을 더욱 뒤로 밀어냅니다.</p>
-                            </div>
-                            <div class="mechanism-item" style="border-top: 3px solid #06b6d4;">
-                                <h4>해결책 (Solution)</h4>
-                                <p style="word-break: keep-all;">주변부에 의도적으로 근시성 초점 이탈을 유도하여 안구 성장 고리를 끊어냅니다.</p>
-                            </div>
+
+                            <p
+                                style="font-size: 0.95rem; color: #475569; margin-top: 2rem; line-height: 1.6; word-break: keep-all;">
+                                <strong style="color: #0f172a;">핵심 결과 (Key Findings):</strong>
+                                등가구면굴절력과 망막 곡률반경 간에는 강한 양의 상관관계(r=0.836)가 확인되었습니다.
+                                특히 <strong>이측(Temporal)과 하측(Inferior) 망막</strong>에서 가장 뚜렷한 변화가 관찰되어,
+                                근시 진행 시 망막이 특정 방향으로 비대칭적으로 팽창함을 시사합니다.
+                            </p>
                         </div>
                     </div>
 
