--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -231,14 +231,59 @@
                     <!-- Connector -->
                     <div class="story-connector"></div>
 
-                    <!-- PHASE 3: Biometric Intelligence -->
+                    <!-- PHASE 3: Prototype Development -->
                     <div class="challenge-section">
-                        <span class="challenge-phase-label">Phase 3: 바이오메트릭 지능</span>
-                        <h2 class="challenge-title">건강을 비추는 <strong>창, 눈</strong></h2>
+                        <span class="challenge-phase-label">Phase 3: 시제품 개발</span>
+                        <h2 class="challenge-title">실시간 <strong>자동안굴절계</strong></h2>
 
                         <p class="challenge-desc" style="word-break: keep-all;">
-                            동공 동역학, 안구 운동, 대비 감도를 AI와 결합하여 신경학적, 대사적 건강 상태를 비침습적으로 평가합니다.
-                            우리의 플랫폼은 당뇨망막병증, 녹내장, 경도인지장애(MCI)의 초기 징후를 조기에 감지합니다.
+                            우리는 눈에서 반사되는 빛의 미세한 패턴인 망막 그림자(Retinal Shadow)의 밝기, 두께, 그리고 이동 속도를 분석하여 굴절이상을 측정하는 혁신적인 시스템을
+                            개발했습니다.
+                            자체 개발한 검영법(Retinoscopy) 모델은 지속적인 업데이트를 통해 고도화되고 있으며, 이를 기반으로 굴절이상을 확률적 모델에 근거하여 실시간으로 산출합니다.
+                        </p>
+
+                        <div class="challenge-visual-container">
+                            <h3 style="font-size: 1.2rem; margin-bottom: 1rem; color: #0f172a; word-break: keep-all;">
+                                머신러닝 기반 검영법 실시간 분석 프로세스</h3>
+
+                            <!-- Images arranged in a row -->
+                            <div class="challenge-visual-grid"
+                                style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+                                <figure
+                                    style="flex: 0 1 300px; background: #f8fafc; padding: 0.5rem; border-radius: 8px; border: 1px solid #e2e8f0;">
+                                    <img src="../../assets/images/research/phase3/auto_ref_device.png"
+                                        alt="실시간 자동안굴절계 프로토타입" style="width: 100%; height: auto; border-radius: 4px;">
+                                    <figcaption
+                                        style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                                        실시간 자동안굴절계 프로토타입</figcaption>
+                                </figure>
+
+                                <figure
+                                    style="flex: 0 1 600px; background: #f8fafc; padding: 0.5rem; border-radius: 8px; border: 1px solid #e2e8f0;">
+                                    <img src="../../assets/images/research/phase3/retinoscopy_view.png"
+                                        alt="망막 그림자 패턴 분석" style="width: 100%; height: auto; border-radius: 4px;">
+                                    <figcaption
+                                        style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                                        망막 그림자의 실시간 이미지 처리 기법</figcaption>
+                                </figure>
+
+                                <figure
+                                    style="flex: 0 1 600px; background: #f8fafc; padding: 0.5rem; border-radius: 8px; border: 1px solid #e2e8f0;">
+                                    <img src="../../assets/images/research/phase3/ai_process_flow.png"
+                                        alt="AI 학습 및 출력 프로세스" style="width: 100%; height: auto; border-radius: 4px;">
+                                    <figcaption
+                                        style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                                        실시간 처리된 이미지의 추론 파이프라인</figcaption>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <!-- Connector for Item 2 -->
+                        <div class="story-connector" style="margin: 3rem auto;"></div>
+
+                        <h2 class="challenge-title" style="margin-top: 0;">각공막 <strong>3D 재구성</strong></h2>
+                        <p class="challenge-desc" style="word-break: keep-all;">
+                            (업데이트 예정) 각막과 공막의 형상을 3차원으로 정밀하게 재구성하여 맞춤형 렌즈 설계 및 안구 형태 분석에 활용하는 기술을 개발 중입니다.
                         </p>
                     </div>
 
