--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -283,8 +283,37 @@
 
                         <h2 class="challenge-title" style="margin-top: 0;">각공막 <strong>3D 재구성</strong></h2>
                         <p class="challenge-desc" style="word-break: keep-all;">
-                            (업데이트 예정) 각막과 공막의 형상을 3차원으로 정밀하게 재구성하여 맞춤형 렌즈 설계 및 안구 형태 분석에 활용하는 기술을 개발 중입니다.
+                            적외선 구조화광 패턴(Structured Light Pattern)을 안구 표면에 투사하여 각막과 공막의 3차원 형상을 정밀 계측하는 기술을 개발하고 있습니다.
+                            획득된 패턴 이미지를 Mesh 기법으로 재구성하여 각막과 공막의 프로파일(Profile)을 3D로 시각화하며, 이는 개인별 안구 형태에 완벽하게 부합하는
+                            맞춤형 공막렌즈 처방을 위한 핵심적인 정량 데이터를 제공합니다.
                         </p>
+
+                        <div class="challenge-visual-container">
+                            <h3 style="font-size: 1.2rem; margin-bottom: 1rem; color: #0f172a; word-break: keep-all;">
+                                구조화광 패턴 기반 3D 형상 복원</h3>
+
+                            <div class="challenge-visual-grid"
+                                style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+                                <figure
+                                    style="flex: 0 1 600px; background: #f8fafc; padding: 0.5rem; border-radius: 8px; border: 1px solid #e2e8f0;">
+                                    <img src="../../assets/images/research/phase3/structured_light_process.png"
+                                        alt="구조화광 패턴 이미지 처리 과정" style="width: 100%; height: auto; border-radius: 4px;">
+                                    <figcaption
+                                        style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                                        적외선 패턴 투사 및 이미지 처리 파이프라인</figcaption>
+                                </figure>
+
+                                <figure
+                                    style="flex: 0 1 600px; background: #f8fafc; padding: 0.5rem; border-radius: 8px; border: 1px solid #e2e8f0;">
+                                    <img src="../../assets/images/research/phase3/3d_reconstruction_method.png"
+                                        alt="3D 재구성 알고리즘 및 딥러닝 모델"
+                                        style="width: 100%; height: auto; border-radius: 4px;">
+                                    <figcaption
+                                        style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                                        기하광학적 연산과 딥러닝 기반 재구성 모델</figcaption>
+                                </figure>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- AI Application Section -->
